Added bootstrap classes and copy

--- a/happyone_saas/app/views/pages/home.html.erb
+++ b/happyone_saas/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h2>Home</h2>
+<div class="jumbotron text-center">
+  <h1>Welcome to Happy</h1>
+  <h3>Write a happy thing a day, keep the doctor away.</h3>
+</div>
