--- a/happyone_saas/app/views/layouts/application.html.erb
+++ b/happyone_saas/app/views/layouts/application.html.erb
@@ -16,7 +16,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'Happy One', root_path, class: 'navbar-brand' %>
+      <%= link_to root_path, class: 'navbar-brand' do %>
+        <i class="fa fa-smile-o fa-lg"></i>
+        Happy One
+      <% end %>
         
     </div>
     <div class="collapse navbar-collapse" id="main-nav-collapse">
