--- a/happyone_saas/app/views/pages/home.html.erb
+++ b/happyone_saas/app/views/pages/home.html.erb
@@ -2,3 +2,20 @@
   <h1>Welcome to Happy</h1>
   <h3>Write a happy thing a day, keep the doctor away.</h3>
 </div>
+<div class="row">
+ <div class="col-md-6">
+    <div class="well">
+      <h2 class="text-center">Basic Membership</h2>
+      <h4>Sign up for free and write your happy thing today.</h4>
+      <br/>
+      <%= link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="well">
+      <h2 class="text-center">Pro Membership</h2>
+      <h4>Sign up for the pro account $9.99/month and read others' happy thing.</h4>
+      <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
+    </div>
+  </div>
+</div>
