--- a/happyone_saas/app/views/pages/home.html.erb
+++ b/happyone_saas/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "Create your profile!", new_user_profile_path(current_user) if current_user %>
 <div class="jumbotron text-center">
   <h1>Welcome to Happy</h1>
   <h3>Write a happy thing a day, keep the doctor away.</h3>
