--- a/happyone_saas/app/views/layouts/application.html.erb
+++ b/happyone_saas/app/views/layouts/application.html.erb
@@ -32,8 +32,11 @@
           <%= link_to "Log In", new_user_session_path, class: 'btn btn-primary navbar-btn', method: :get %>
         <% end %>
       </div>
-      
       <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+          <li><%= link_to "Community", users_path %></li>
+          <li><%= link_to "My Account", edit_user_registration_path %></li>
+        <% end %>
         <li><%= link_to "About", about_path %></li>
         <li><%= link_to "Contact Us", new_contact_path %></li>
       </ul>
@@ -48,6 +51,6 @@
   
   <%= yield %>
 </div>
-
+  
 </body>
 </html>
