Change the home page

--- a/happyone_saas/app/views/pages/home.html.erb
+++ b/happyone_saas/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center">
-  <h1>Welcome to Happy</h1>
+  <h1>Welcome to Happy One</h1>
   <h3>Write a happy thing a day, keep the doctor away.</h3>
 </div>
 <div class="row">
